--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>s3</artifactId>
             <version>2.21.31</version>
         </dependency>
+        <!-- AWS SDK for Translate -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>translate</artifactId>
+            <version>2.21.31</version>
+        </dependency>
     </dependencies>
 
     <build>
